--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     {% block styles %}{% endblock %}
 </head>
 
-<body class="light-theme">
+<body>
     <div class="app-wrapper">
         {% include 'nav.html' %}
         {% include 'sidebar.html' %}
