--- a/templates/index.html
+++ b/templates/index.html
@@ -28,16 +28,16 @@
                 </div>
             </div>
             <div class="hero-visual">
-                <div class="floating-cards">
-                    <div class="float-card card-1">
+                <div class="cards-container">
+                    <div class="static-card static-card-1">
                         <div class="card-icon">📈</div>
                         <div class="card-text">Smart Investment</div>
                     </div>
-                    <div class="float-card card-2">
+                    <div class="static-card static-card-2">
                         <div class="card-icon">🎙️</div>
                         <div class="card-text">Daily Insights</div>
                     </div>
-                    <div class="float-card card-3">
+                    <div class="static-card static-card-3">
                         <div class="card-icon">🤖</div>
                         <div class="card-text">Automated Trading</div>
                     </div>
