--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,7 +1,7 @@
 <button id="toggle-sidebar" class="toggle-btn">➡️</button>
 <div id="sidebar" class="sidebar">
-    <h2 class="sidebar-title">Past Podcast Recordings</h2>
+    <h2 class="sidebar-title">Past Crypto News</h2>
     <div id="podcast-list" class="podcast-list">
-        <!-- Podcasts will be dynamically populated here -->
+        <!-- News articles will be dynamically populated here -->
     </div>
 </div>
