--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,12 +1,3 @@
-/* Index-specific container */
-.index-container {
-    width: 100%;
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 0 1.25rem;
-    position: relative;
-}
-
 /* Hero Section */
 .hero-wrapper {
     position: relative;
@@ -81,18 +72,18 @@
 
 /* Card Positions */
 .static-card-1 {
-    top: 40px;
-    right: 120px;
+    top: -10%;
+    right: 65%;
 }
 
 .static-card-2 {
-    top: 200px;
-    right: 420px;
+    top: 27%;
+    right: 15%;
 }
 
 .static-card-3 {
-    top: 200px;
-    right: 120px;
+    top: 65%;
+    right: 65%;
 }
 
 .card-icon {
