--- a/templates/base.html
+++ b/templates/base.html
@@ -211,6 +211,7 @@
 
     <!-- Load other scripts after near-wallet.js -->
     <script src="{{ url_for('static', filename='js/audioPlayer.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='js/podcast-controls.js') }}" defer></script>
     <script src="{{ url_for('static', filename='js/navbar.js') }}" defer></script>
     <script src="{{ url_for('static', filename='js/sidebar.js') }}" defer></script>
     <script src="{{ url_for('static', filename='js/index.js') }}" defer></script>
