Add additional time interval options for swap frequency in DCA settings

--- a/templates/dca.html
+++ b/templates/dca.html
@@ -47,6 +47,11 @@
                             <option value="21600000000000">6 Hours</option>
                             <option value="43200000000000">12 Hours</option>
                             <option value="86400000000000">24 Hours</option>
+                            <option value="604800000000000">7 Days</option>
+                            <option value="2592000000000000">30 Days</option>
+                            <option value="7776000000000000">90 Days</option>
+                            <option value="15552000000000000">180 Days</option>
+                            <option value="31104000000000000">360 Days</option>
                         </select>
                         <small class="form-text text-muted">How often to perform the swap</small>
                     </div>
@@ -173,6 +178,11 @@
                     <option value="21600000000000">6 Hours</option>
                     <option value="43200000000000">12 Hours</option>
                     <option value="86400000000000">24 Hours</option>
+                    <option value="604800000000000">7 Days</option>
+                    <option value="2592000000000000">30 Days</option>
+                    <option value="7776000000000000">90 Days</option>
+                    <option value="15552000000000000">180 Days</option>
+                    <option value="31104000000000000">360 Days</option>
                 </select>
                 <button onclick="changeSwapInterval()" class="dca-btn dca-btn-primary">
                     <i class="fas fa-clock"></i> Update Interval
